RESOLVED FIXED148470
[EFL] REGRESSION(r188793): It made 200 layout tests and Bindings/event-target-wrapper.html performance test fail
https://bugs.webkit.org/show_bug.cgi?id=148470
Summary [EFL] REGRESSION(r188793): It made 200 layout tests and Bindings/event-target...
Attachments
Patch (22.54 KB, patch)
2015-09-10 04:17 PDT, Hunseop Jeong
no flags
Rebase the patch (23.88 KB, patch)
2015-10-19 04:07 PDT, Hunseop Jeong
no flags
Patch (20.15 KB, patch)
2016-03-27 21:18 PDT, Hunseop Jeong
no flags
Csaba Osztrogonác
Comment 1 2015-08-27 08:28:11 PDT
I bisected manually, http://trac.webkit.org/changeset/188793 is the culprit. I won't have time debugging and fixing this regression in the near future. If somebody is interested in it, feel free to pick it up.
Csaba Osztrogonác
Comment 2 2015-08-27 09:28:27 PDT
*** Bug 148521 has been marked as a duplicate of this bug. ***
Csaba Osztrogonác
Comment 3 2015-08-27 09:35:24 PDT
I skipped the failing perf test in http://trac.webkit.org/changeset/189027 . Please unskip it with the proper fix.
Gyuyoung Kim
Comment 4 2015-09-06 22:19:08 PDT
Gyuyoung Kim
Comment 5 2015-09-06 23:48:13 PDT
I skip the failure test at the moment - http://trac.webkit.org/changeset/189461
Csaba Osztrogonác
Comment 6 2015-09-10 03:43:47 PDT
*** Bug 149034 has been marked as a duplicate of this bug. ***
Hunseop Jeong
Comment 7 2015-09-10 04:17:23 PDT
Hunseop Jeong
Comment 8 2015-09-10 04:21:22 PDT
In my investigation, r136133 is suppressed the UI events in webPage. So I remove the codes which is landed at r136133. I don't know that this patch is correct. But after applying this patch, tests related with the UI events are passed.
Csaba Osztrogonác
Comment 9 2015-09-10 08:21:29 PDT
(In reply to comment #8) > In my investigation, r136133 is suppressed the UI events in webPage. > So I remove the codes which is landed at r136133. > I don't know that this patch is correct. But after applying this patch, > tests related with the UI events are passed. You might be right that reverting https://trac.webkit.org/changeset/136133 solves this issue. But what about the original issue was solved by r136133 ? I don't think if we should reintroduce an old bug to fix a new bug.
Hunseop Jeong
Comment 10 2015-09-10 18:50:49 PDT
(In reply to comment #9) > (In reply to comment #8) > > In my investigation, r136133 is suppressed the UI events in webPage. > > So I remove the codes which is landed at r136133. > > I don't know that this patch is correct. But after applying this patch, > > tests related with the UI events are passed. > > You might be right that reverting https://trac.webkit.org/changeset/136133 > solves this issue. But what about the original issue was solved by r136133 ? > > I don't think if we should reintroduce an old bug to fix a new bug. You are right. In my understand, r136133 suppressed the user events until first render is done. I tried to reproduce the problem of r136133 but it is hard to reproduce the problem followed by description in r136133. What do I do? :( Or another approach, we can add the condition to return true when user events is called by WTR. If this approach is right, we have to recover some variables or functions which is removed in r188793 to check the state.
Hunseop Jeong
Comment 11 2015-10-06 19:56:28 PDT
Ossy, ping?
Hunseop Jeong
Comment 12 2015-10-19 04:05:18 PDT
If there is no problem, I want to upload this patch. After applying this patch, many tests passed correctly. Before applying the patch(https://build.webkit.org/builders/EFL%20Linux%2064-bit%20Release%20WK2/builds/25022/steps/layout-test/logs/stdio): Expected to timeout, but passed: (1) Expected to fail, but passed: (24) Unexpected flakiness: text-only failures (15) Unexpected flakiness: timeouts (1) Regressions: Unexpected text-only failures (50) Regressions: Unexpected crashes (4) Regressions: Unexpected timeouts (8) After applying the patch (My PC): Expected to timeout, but passed: (16) Expected to fail, but passed: (204) Unexpected flakiness: text-only failures (5) Unexpected flakiness: timeouts (24) Regressions: Unexpected text-only failures (45) Regressions: Unexpected image-only failures (7) Regressions: Unexpected crashes (5) Regressions: Unexpected timeouts (3)
Hunseop Jeong
Comment 13 2015-10-19 04:07:30 PDT
Created attachment 263470 [details] Rebase the patch
Gyuyoung Kim
Comment 14 2015-10-19 18:13:47 PDT
(In reply to comment #9) > (In reply to comment #8) > > In my investigation, r136133 is suppressed the UI events in webPage. > > So I remove the codes which is landed at r136133. > > I don't know that this patch is correct. But after applying this patch, > > tests related with the UI events are passed. > > You might be right that reverting https://trac.webkit.org/changeset/136133 > solves this issue. But what about the original issue was solved by r136133 ? > > I don't think if we should reintroduce an old bug to fix a new bug. According to Hunseop test, the issue fixed by r136133 is not reproduced anymore though we land this patch. Hunseop right ? Please verify the issue again. If so I agree to land this patch.
Gyuyoung Kim
Comment 15 2016-03-25 07:40:39 PDT
Comment on attachment 263470 [details] Rebase the patch cq- because this patch should be rebased. Hunseop, please upload after doing rebase against latest trunk.
Hunseop Jeong
Comment 16 2016-03-27 21:18:00 PDT
Created attachment 275009 [details] Patch Rebase the patch
Hunseop Jeong
Comment 17 2016-03-27 21:50:22 PDT
(In reply to comment #15) > Comment on attachment 263470 [details] > Rebase the patch > > cq- because this patch should be rebased. Hunseop, please upload after doing > rebase against latest trunk. gyuyoung, I rebase the patch. Could you verify the patch?
Gyuyoung Kim
Comment 18 2016-03-27 22:04:36 PDT
Comment on attachment 275009 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=275009&action=review > LayoutTests/platform/efl/TestExpectations:-2627 > -webkit.org/b/148470 editing/deleting/delete-by-word-002.html [ Failure ] Hunseop, I wonder if these unskip tests can be still upskipped on latest EFL port. Could you check it locally ?
Hunseop Jeong
Comment 19 2016-03-27 22:07:39 PDT
(In reply to comment #18) > Comment on attachment 275009 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=275009&action=review > > > LayoutTests/platform/efl/TestExpectations:-2627 > > -webkit.org/b/148470 editing/deleting/delete-by-word-002.html [ Failure ] > > Hunseop, I wonder if these unskip tests can be still upskipped on latest EFL > port. Could you check it locally ? I got the below result: Expected to crash, but passed: (35) fast/events/scroll-event-phase.html fast/history/history-traversal-is-asynchronous.html fast/history/link-inside-any.html fast/loader/image-in-page-cache.html http/tests/cache/history-only-cached-subresource-loads.html loader/stateobjects/replacestate-size.html media/audio-mpeg4-supported.html media/remove-from-document-no-load.html media/track/track-cue-rendering-empty-cue-crash.html media/track/track-remove-quickly.html media/video-click-dblckick-standalone.html media/video-source-type-params.html svg/W3C-SVG-1.1/animate-elem-22-b.svg svg/W3C-SVG-1.1/animate-elem-23-t.svg svg/W3C-SVG-1.1/animate-elem-28-t.svg svg/W3C-SVG-1.1/animate-elem-29-b.svg svg/W3C-SVG-1.1/interact-order-01-b.svg svg/W3C-SVG-1.1/interact-order-03-b.svg svg/W3C-SVG-1.1/linking-a-01-b.svg svg/W3C-SVG-1.1/linking-a-02-b.svg svg/W3C-SVG-1.1/linking-a-04-t.svg svg/W3C-SVG-1.1/painting-stroke-07-t.svg svg/W3C-SVG-1.1/paths-data-02-t.svg svg/W3C-SVG-1.1/paths-data-04-t.svg svg/W3C-SVG-1.1/paths-data-09-t.svg svg/W3C-SVG-1.1/paths-data-12-t.svg svg/W3C-SVG-1.1/paths-data-13-t.svg svg/W3C-SVG-1.1/pservers-grad-01-b.svg svg/W3C-SVG-1.1/script-handle-02-b.svg svg/W3C-SVG-1.1/script-handle-03-b.svg svg/W3C-SVG-1.1/script-handle-04-b.svg svg/W3C-SVG-1.1/shapes-ellipse-01-t.svg svg/W3C-SVG-1.1/shapes-ellipse-02-t.svg svg/W3C-SVG-1.1/shapes-line-01-t.svg svg/as-background-image/animated-svg-as-background.html Expected to timeout, but passed: (18) editing/spelling/design-mode-spellcheck-off.html fast/dom/HTMLAnchorElement/anchor-download-unset.html fast/dom/HTMLAnchorElement/anchor-nodownload.html fast/events/focus-change-crash2.html fast/events/popup-allowed-from-gesture-initiated-form-submit.html fast/forms/formmethod-attribute-input-2.html fast/forms/range/range-type-change-onchange.html fast/forms/submit-while-you-submit.html fast/forms/type-after-focus-rule-shrink-width.html fast/frames/focus-controller-crash-change-event.html fast/history/gesture-before-onload-form-submit.html fast/history/gesture-before-onload-location-href.html fast/layers/no-clipping-overflow-hidden-added-after-transform.html fast/replaced/no-focus-ring-iframe.html fast/workers/worker-close-more.html http/tests/navigation/no-referrer-subframe.html imported/blink/fast/css/crash-corner-present.html imported/blink/fast/events/popup-forwarded-gesture.html Expected to fail, but passed: (42) css3/flexbox/multiline-reverse-wrap-baseline.html fast/css-intrinsic-dimensions/height-css-tables.html fast/css-intrinsic-dimensions/height-tables.html fast/css/vertical-align-baseline-rowspan-010.html fast/custom-elements/defined-rule.html fast/events/popup-blocked-from-fake-user-gesture.html fast/flexbox/line-clamp-link-after-ellipsis.html fast/forms/focus-change-on-keypress.html fast/multicol/multicol-with-child-renderLayer-for-input.html fast/shadow-dom/css-scoping-shadow-slotted-nested.html fast/shadow-dom/text-slot-child-crash.svg fast/sub-pixel/input-caret-on-subpixel-bound.html fast/table/colspanMinWidth-vertical.html fast/text/hyphen-min-preferred-width.html fast/text/international/system-language/arabic-glyph-cache-fill-combine.html fast/text/international/system-language/hindi-system-font-punctuation.html ietestcenter/css3/flexbox/flexbox-layout-001.htm imported/blink/fast/events/click-with-large-negative-text-indent.html imported/blink/fast/multicol/outlines-at-column-boundaries.html imported/blink/fast/replaced/image-map-alt-content.html imported/w3c/web-platform-tests/html/semantics/embedded-content/the-area-element/area-coords.html scrollbars/scrollbar-drag-thumb-with-large-content.html svg/text/foreignObject-repaint.xml svg/text/select-text-svgfont.html svg/text/select-textLength-spacing-squeeze-1.svg svg/text/select-textLength-spacing-squeeze-2.svg svg/text/select-textLength-spacing-squeeze-3.svg svg/text/select-textLength-spacing-squeeze-4.svg svg/text/select-textLength-spacing-stretch-1.svg svg/text/select-textLength-spacing-stretch-2.svg svg/text/select-textLength-spacing-stretch-3.svg svg/text/select-textLength-spacing-stretch-4.svg svg/text/select-textLength-spacingAndGlyphs-stretch-4.svg svg/text/select-x-list-1.svg svg/text/select-x-list-2.svg svg/text/select-x-list-3.svg svg/text/select-x-list-4.svg svg/text/select-x-list-with-tspans-1.svg svg/text/select-x-list-with-tspans-2.svg svg/text/select-x-list-with-tspans-3.svg svg/text/select-x-list-with-tspans-4.svg svg/text/selection-doubleclick.svg Unexpected flakiness: text-only failures (25) compositing/repaint/fixed-background-scroll.html [ Failure Pass ] css1/basic/containment.html [ Failure ImageOnlyFailure Pass ] css1/basic/id_as_selector.html [ Failure ImageOnlyFailure Pass ] css1/basic/inheritance.html [ Failure ImageOnlyFailure Pass ] css1/conformance/forward_compatible_parsing.html [ Failure ImageOnlyFailure Pass ] css1/text_properties/letter_spacing.html [ Failure ImageOnlyFailure Pass ] css1/text_properties/line_height.html [ Failure ImageOnlyFailure Pass ] css1/text_properties/text_decoration.html [ Failure ImageOnlyFailure Pass ] css1/text_properties/text_indent.html [ Failure ImageOnlyFailure Pass ] css1/text_properties/text_transform.html [ Failure ImageOnlyFailure Pass ] css1/text_properties/vertical_align.html [ Failure ImageOnlyFailure Pass ] css1/text_properties/word_spacing.html [ Failure ImageOnlyFailure Pass ] fast/picture/viewport-resize.html [ Failure Timeout Pass ] fast/scrolling/scroll-animator-overlay-scrollbars-hovered.html [ Failure Pass ] fast/writing-mode/vertical-font-vmtx-units-per-em.html [ Failure Pass ] imported/w3c/web-platform-tests/IndexedDB/abort-in-initial-upgradeneeded.html [ Failure Pass ] media/video-page-load-preload-none.html [ Failure Pass ] storage/domstorage/events/basic.html [ Failure Pass ] svg/W3C-SVG-1.1/animate-elem-21-t.svg [ Failure ImageOnlyFailure Crash ] svg/W3C-SVG-1.1/linking-a-03-b.svg [ Failure ImageOnlyFailure Crash ] svg/W3C-SVG-1.1/paths-data-05-t.svg [ Failure ImageOnlyFailure Crash ] svg/W3C-SVG-1.1/paths-data-08-t.svg [ Failure ImageOnlyFailure Crash ] svg/W3C-SVG-1.1/paths-data-10-t.svg [ Failure ImageOnlyFailure Pass ] svg/W3C-SVG-1.1/script-handle-01-b.svg [ Failure ImageOnlyFailure Crash ] svg/W3C-SVG-1.1/shapes-circle-01-t.svg [ Failure ImageOnlyFailure Crash ] Unexpected flakiness: timeouts (23) accessibility/accessibility-node-memory-management.html [ Timeout Pass ] animations/3d/change-transform-in-end-event.html [ ImageOnlyFailure Timeout Pass ] animations/added-while-suspended.html [ Timeout Pass ] batterystatus/add-listener-from-callback.html [ Timeout Pass ] canvas/philip/tests/2d.canvas.readonly.html [ Timeout Pass ] compositing/absolute-inside-out-of-view-fixed.html [ Timeout Pass ] compositing/animation/animated-composited-inside-hidden.html [ Timeout Pass ] compositing/backface-visibility/backface-visibility-3d.html [ ImageOnlyFailure Timeout Pass ] fast/css3-text/css3-text-decoration/repaint/repaint-text-decoration-color.html [ Timeout Pass ] fast/custom-elements/upgrading/Node-cloneNode.html [ Failure Timeout ] http/tests/security/contentSecurityPolicy/connect-src-xmlhttprequest-redirect-to-blocked.html [ Timeout Pass ] imported/blink/http/tests/plugins/get-url-notify-on-removal.html [ Timeout Pass ] imported/w3c/web-platform-tests/IndexedDB/idbcursor-direction.htm [ Timeout Pass ] imported/w3c/web-platform-tests/IndexedDB/idbcursor-primarykey.htm [ Timeout Pass ] imported/w3c/web-platform-tests/IndexedDB/idbdatabase_createObjectStore8-parameters.htm [ Timeout Pass ] imported/w3c/web-platform-tests/IndexedDB/idbdatabase_createObjectStore9-invalidparameters.htm [ Timeout Pass ] imported/w3c/web-platform-tests/IndexedDB/key_valid.html [ Timeout Pass ] imported/w3c/web-platform-tests/html/dom/dynamic-markup-insertion/document-writeln/document.writeln-01.xhtml [ Timeout Pass ] media/video-controls-fullscreen-volume.html [ Crash Timeout ] sputnik/Unicode/Unicode_510/S7.6_A3.2.html [ Failure Timeout Pass ] sputnik/Unicode/Unicode_510/S7.6_A5.2_T1.html [ Timeout Pass ] storage/indexeddb/dont-wedge.html [ Timeout Pass ] storage/indexeddb/mozilla/object-store-remove-values.html [ Timeout Pass ] Regressions: Unexpected text-only failures (105) accessibility/aria-current-global-attribute.html [ Failure ] accessibility/aria-current.html [ Failure ] accessibility/aria-table-attributes.html [ Failure ] accessibility/auto-fill-types.html [ Failure ] accessibility/double-nested-inline-element-missing-from-tree.html [ Failure ] accessibility/image-link.html [ Failure ] accessibility/radio-button-group-members.html [ Failure ] accessibility/roles-exposed.html [ Failure ] accessibility/svg-group-element-with-title.html [ Failure ] accessibility/svg-image.html [ Failure ] accessibility/svg-labelledby.html [ Failure ] accessibility/svg-remote-element.html [ Failure ] accessibility/table-detection.html [ Failure ] compositing/canvas/accelerated-canvas-compositing.html [ Failure ] compositing/fixed-with-fixed-layout.html [ Failure ] compositing/geometry/ancestor-overflow-change.html [ Failure ] compositing/geometry/composited-in-columns.html [ Failure ] compositing/layer-creation/will-change-layer-creation.html [ Failure ] compositing/masks/clip-path-composited-descendent.html [ Failure ] compositing/repaint/page-scale-repaint.html [ Failure ] compositing/tiled-layers-hidpi.html [ Failure ] editing/execCommand/5481523.html [ Failure ] fast/borders/empty-outline-border-assert.html [ Failure ] fast/css/layerZOrderCrash.html [ Failure ] fast/css/vertical-text-overflow-ellipsis-text-align-center.html [ Failure ] fast/css/vertical-text-overflow-ellipsis-text-align-right.html [ Failure ] fast/css/word-space-extra.html [ Failure ] fast/css3-text/css3-text-decoration/text-underline-position/underline-visual-overflow-with-subpixel-position.html [ Failure ] fast/dom/HTMLTableColElement/resize-table-using-col-width.html [ Failure ] fast/dom/adopt-attribute-crash.svg [ Failure ] fast/dom/horizontal-scrollbar-in-rtl.html [ Failure ] fast/dynamic/text-combine.html [ Failure ] fast/events/show-modal-dialog-onblur-onfocus.html [ Failure ] fast/events/touch/basic-single-touch-events.html [ Failure ] fast/forms/focus-option-control-on-page.html [ Failure ] fast/forms/validity-assertion-inserting-into-datalist.html [ Failure ] fast/frames/flattening/iframe-flattening-offscreen.html [ Failure ] fast/html/details-remove-summary-1-and-click.html [ Failure ] fast/html/details-remove-summary-4-and-click.html [ Failure ] fast/preloader/frame-src.html [ Failure ] fast/repaint/focus-ring-repaint.html [ Failure ] fast/scrolling/scroll-animator-select-list-events.html [ Failure ] fast/shadow-dom/slot-removal-crash-2.html [ Failure ] fast/spatial-navigation/snav-input.html [ Failure ] fast/spatial-navigation/snav-textarea.html [ Failure ] fast/table/click-near-anonymous-table.html [ Failure ] fast/text/orientation-sideways.html [ Failure ] fast/text/svg-font-face-with-kerning.html [ Failure ] fast/text/textIteratorNilRenderer.html [ Failure ] fast/text/trak-optimizeLegibility.html [ Failure ] fast/transforms/bounding-rect-zoom.html [ Failure ] fast/xmlhttprequest/xmlhttprequest-get.xhtml [ Failure ] fullscreen/video-cursor-auto-hide.html [ Failure ] http/tests/appcache/different-https-origin-resource-main.html [ Failure ] http/tests/cookies/private-cookie-storage.html [ Failure ] http/tests/loading/hidpi-preload-picture-sizes.html [ Failure ] http/tests/loading/server-redirect-for-provisional-load-caching.html [ Failure ] http/tests/local/link-stylesheet-load-order.html [ Failure ] http/tests/media/video-accept-encoding.html [ Failure ] http/tests/misc/bad-charset-alias.html [ Failure ] http/tests/plugins/plugin-javascript-access.html [ Failure ] http/tests/security/xssAuditor/link-opens-new-window.html [ Failure ] http/tests/workers/worker-importScriptsOnError.html [ Failure ] imported/w3c/web-platform-tests/fetch/api/basic/request-headers.html [ Failure ] imported/w3c/web-platform-tests/html/semantics/document-metadata/styling/LinkStyle.html [ Failure ] imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/readyState_during_canplaythrough.html [ Failure ] js/dom/constructor-length.html [ Failure ] js/dom/global-constructors-attributes-dedicated-worker.html [ Failure ] pageoverlay/overlay-installation.html [ Failure ] pageoverlay/overlay-large-document-scrolled.html [ Failure ] pageoverlay/overlay-large-document.html [ Failure ] sputnik/Unicode/Unicode_510/S7.6_A3.1.html [ Failure ] sputnik/Unicode/Unicode_510/S7.6_A5.3_T1.html [ Failure ] sputnik/Unicode/Unicode_510/S7.6_A5.3_T2.html [ Failure ] storage/indexeddb/modern/date-basic-private.html [ Failure ] storage/indexeddb/modern/date-basic.html [ Failure ] storage/indexeddb/modern/get-keyrange-private.html [ Failure ] storage/indexeddb/modern/get-keyrange.html [ Failure ] storage/indexeddb/modern/idbobjectstore-delete-1-private.html [ Failure ] storage/indexeddb/modern/idbobjectstore-delete-1.html [ Failure ] svg/W3C-SVG-1.1/interact-order-02-b.svg [ Failure ] svg/W3C-SVG-1.1/interact-zoom-01-t.svg [ Failure ] svg/W3C-SVG-1.1/paths-data-03-f.svg [ Failure ] svg/W3C-SVG-1.1/paths-data-06-t.svg [ Failure ] svg/W3C-SVG-1.1/paths-data-07-t.svg [ Failure ] svg/W3C-SVG-1.1/paths-data-15-t.svg [ Failure ] svg/W3C-SVG-1.1/shapes-circle-02-t.svg [ Failure ] svg/W3C-SVG-1.1/shapes-intro-01-t.svg [ Failure ] svg/text/kerning.svg [ Failure ] svg/text/multichar-glyph.svg [ Failure ] svg/text/text-altglyph-01-b.svg [ Failure ] svg/text/text-hkern.svg [ Failure ] svg/text/text-overflow-ellipsis-svgfont-kerning-ligatures.html [ Failure ] svg/text/text-overflow-ellipsis-svgfont.html [ Failure ] svg/text/text-text-04-t.svg [ Failure ] svg/text/text-text-05-t.svg [ Failure ] svg/text/text-text-06-t.svg [ Failure ] svg/text/text-vkern.svg [ Failure ] svg/transforms/text-with-mask-with-svg-transform.svg [ Failure ] svg/wicd/test-rightsizing-b.xhtml [ Failure ] svg/zoom/page/zoom-svg-through-object-with-absolute-size-2.xhtml [ Failure ] svg/zoom/page/zoom-svg-through-object-with-absolute-size.xhtml [ Failure ] svg/zoom/page/zoom-svg-through-object-with-percentage-size.xhtml [ Failure ] webaudio/mediastreamaudiodestinationnode.html [ Failure ] webaudio/mediastreamaudiosourcenode.html [ Failure ] Regressions: Unexpected image-only failures (2) fast/text/international/system-language/han-quotes.html [ ImageOnlyFailure ] mathml/presentation/radical-bar-visibility.html [ ImageOnlyFailure ] Regressions: Unexpected audio failures (3) webaudio/audiobuffersource.html [ Failure ] webaudio/codec-tests/wav/24bit-22khz-resample.html [ Failure ] webaudio/codec-tests/wav/24bit-44khz.html [ Failure ] Regressions: Unexpected crashes (7) compositing/video/video-border-radius.html [ Crash ] fast/overflow/overflow-height-float-not-removed-crash.html [ Crash ] fast/overflow/overflow-height-float-not-removed-crash3.html [ Crash ] http/tests/media/reload-after-dialog.html [ Crash ] imported/blink/editing/selection/selectstart-event-crash.html [ Crash ] media/track/video-track-alternate-groups.html [ Crash ] media/video-fullscreeen-only-controls.html [ Crash ] Regressions: Unexpected timeouts (11) accessibility/textarea-selected-text-range.html [ Timeout ] fast/custom-elements/attribute-changed-callback.html [ Timeout ] fast/custom-elements/lifecycle-callback-timing.html [ Timeout ] fast/custom-elements/parser/parser-constructs-custom-element-in-document-write.html [ Timeout ] fast/custom-elements/parser/parser-uses-registry-of-owner-document.html [ Timeout ] fast/events/can-click-element-on-page-with-active-pseudo-class-and-search-field.html [ Timeout ] fast/events/drag-and-drop-link-fast-multiple-times-does-not-crash.html [ Timeout ] http/tests/appcache/auth.html [ Timeout ] http/tests/security/contentSecurityPolicy/audio-redirect-blocked.html [ Timeout ] http/tests/security/contentSecurityPolicy/video-redirect-blocked.html [ Timeout ] http/tests/security/inactive-document-with-empty-security-origin.html [ Timeout ]
Gyuyoung Kim
Comment 20 2016-03-27 22:10:05 PDT
Comment on attachment 275009 [details] Patch ok, cq=me. Let see result of layout test after landing this patch.
WebKit Commit Bot
Comment 21 2016-03-27 22:59:51 PDT
Comment on attachment 275009 [details] Patch Clearing flags on attachment: 275009 Committed r198728: <http://trac.webkit.org/changeset/198728>
WebKit Commit Bot
Comment 22 2016-03-27 22:59:58 PDT
All reviewed patches have been landed. Closing bug.
Hunseop Jeong
Comment 23 2016-03-28 01:49:24 PDT
Remove the more passed tests after r198728 Committed r198731: <http://trac.webkit.org/changeset/198731>
Note You need to log in before you can comment on or make changes to this bug.