[EFL] REGRESSION(r188793): It made 200 layout tests and Bindings/event-target-wrapper.html performance test fail PerformanceTests:

https://bugs.webkit.org/show_bug.cgi?id=148470

Reviewed by Darin Adler.

* Skipped: Unskip the Bindings/event-target-wrapper test.

Source/WebKit2:

https://bugs.webkit.org/show_bug.cgi?id=148470

Reviewed by Darin Adler.

UI events are suppressed in webPage after r188793.
I revert the r136133 for passing the events to WebPage

* WebProcess/WebPage/WebPage.cpp: Removed the codes which was uploaded at r136133.
(WebKit::WebPage::mouseEvent):
(WebKit::WebPage::wheelEvent):
(WebKit::WebPage::keyEvent):
(WebKit::WebPage::touchEvent):
(WebKit::WebPage::canHandleUserEvents): Deleted.
* WebProcess/WebPage/WebPage.h:

LayoutTests:

https://bugs.webkit.org/show_bug.cgi?id=148470

Reviewed by Darin Adler.

* platform/efl/TestExpectations: Unskip the passed tests.


Canonical link: https://commits.webkit.org/174032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198728 268f45cc-cd09-0410-ab3c-d52691b4dbfc